feat: mvp fuzzy

--- a/final-version/fuzzy-logic/data/diseases.json
+++ b/final-version/fuzzy-logic/data/diseases.json
@@ -1,7 +1,18 @@
-[
-  "грип",
-  "застуда",
-  "мігрень",
-  "covid",
-  "харчове отруєння"
-]
+{
+  "Грип": {
+    "description": "Вірусне захворювання з високою температурою",
+    "tags": ["температура", "нежить"]
+  },
+  "Covid": {
+    "description": "Коронавірусна інфекція",
+    "tags": ["задишка", "втрата смаку"]
+  },
+  "Застуда": {
+    "description": "Легка вірусна інфекція",
+    "tags": ["нежить", "незначна температура"]
+  },
+  "Алергія": {
+    "description": "Реакція імунної системи на подразник",
+    "tags": ["нежить", "задишка"]
+  }
+}
